<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#b3b3b3"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:contentDescription="@string/none"
            android:src="@drawable/smallicon" />

        <TextView
            android:id="@+id/textView2_1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:paddingLeft="10sp"
            android:text="@string/app_name"
            android:textColor="#343434"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:textColor="#343434"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:text="@string/title_input1"
            android:textColor="#343434"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7sp"
            android:gravity="center"
            android:text="@string/title_input2"
            android:textColor="#343434"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:weightSum="8" >

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="8"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclickbuttonOK"
            android:text="@string/buttonOK"
            android:textColor="#343434"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>