<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff" >
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#b3b3b3"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:contentDescription="@string/none"
            android:src="@drawable/smallicon" />

        <TextView
            android:id="@+id/textView2_1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:paddingLeft="10sp"
            android:text="@string/app_name"
            android:textColor="#343434"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="0.7"
         android:orientation="vertical" >

         <TextView
             android:id="@+id/textView5_1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30sp"
             android:gravity="center"
             android:textColor="#343434"
             android:textSize="25sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/textView5_2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:gravity="center"
             android:textColor="#343434"
             android:textSize="18sp" />
         
          <ScrollView
              android:id="@+id/scrollView1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp" >
              
              <TextView
                  android:id="@+id/textView5_3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="5dp"
                  android:textColor="#343434"
                  android:textSize="15sp" />
          </ScrollView>
     </LinearLayout>
     

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button5"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onclickButtonReset"
            android:text="@string/buttonRESET" 
            android:textStyle="bold" 
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>